nvml-wrapper-sys/nvml.h

    typedef struct nvmlDevice_st *nvmlDevice_t;
    typedef struct nvmlPciInfo_st
    {
        char busIdLegacy[NVML_DEVICE_PCI_BUS_ID_BUFFER_V2_SIZE]; 
        unsigned int domain;                                     
        unsigned int bus;                                        
        unsigned int device;                                     
        unsigned int pciDeviceId;                                
        unsigned int pciSubSystemId; 
        char busId[NVML_DEVICE_PCI_BUS_ID_BUFFER_SIZE]; 
    } nvmlPciInfo_t;
    typedef enum nvmlGpuLevel_enum
    {
        NVML_TOPOLOGY_INTERNAL = 0,    
        NVML_TOPOLOGY_SINGLE = 10,     
        NVML_TOPOLOGY_MULTIPLE = 20,   
        NVML_TOPOLOGY_HOSTBRIDGE = 30, 
        NVML_TOPOLOGY_NODE = 40,       
        NVML_TOPOLOGY_SYSTEM = 50,     
    } nvmlGpuTopologyLevel_t;
    typedef enum nvmlGpuP2PStatus_enum
    {
        NVML_P2P_STATUS_OK = 0,
        NVML_P2P_STATUS_CHIPSET_NOT_SUPPORED,
        NVML_P2P_STATUS_GPU_NOT_SUPPORTED,
        NVML_P2P_STATUS_IOH_TOPOLOGY_NOT_SUPPORTED,
        NVML_P2P_STATUS_DISABLED_BY_REGKEY,
        NVML_P2P_STATUS_NOT_SUPPORTED,
        NVML_P2P_STATUS_UNKNOWN
    } nvmlGpuP2PStatus_t;
    typedef enum nvmlGpuP2PCapsIndex_enum
    {
        NVML_P2P_CAPS_INDEX_READ = 0,
        NVML_P2P_CAPS_INDEX_WRITE,
        NVML_P2P_CAPS_INDEX_NVLINK,
        NVML_P2P_CAPS_INDEX_ATOMICS,
        NVML_P2P_CAPS_INDEX_PROP,
        NVML_P2P_CAPS_INDEX_UNKNOWN
    } nvmlGpuP2PCapsIndex_t;
    typedef enum nvmlPcieUtilCounter_enum
    {
        NVML_PCIE_UTIL_TX_BYTES = 0, 
        NVML_PCIE_UTIL_RX_BYTES = 1, 
        NVML_PCIE_UTIL_COUNT
    } nvmlPcieUtilCounter_t;
    typedef enum nvmlEnableState_enum
    {
        NVML_FEATURE_DISABLED = 0, 
        NVML_FEATURE_ENABLED = 1   
    } nvmlEnableState_t;
    typedef enum nvmlBrandType_enum
    {
        NVML_BRAND_UNKNOWN = 0,
        NVML_BRAND_QUADRO = 1,
        NVML_BRAND_TESLA = 2,
        NVML_BRAND_NVS = 3,
        NVML_BRAND_GRID = 4,
        NVML_BRAND_GEFORCE = 5,
        NVML_BRAND_TITAN = 6,
        NVML_BRAND_COUNT
    } nvmlBrandType_t;
    typedef enum nvmlTemperatureThresholds_enum
    {
        NVML_TEMPERATURE_THRESHOLD_SHUTDOWN = 0, 
        NVML_TEMPERATURE_THRESHOLD_SLOWDOWN = 1, 
        NVML_TEMPERATURE_THRESHOLD_MEM_MAX = 2,  
        NVML_TEMPERATURE_THRESHOLD_GPU_MAX = 3,  
        NVML_TEMPERATURE_THRESHOLD_COUNT
    } nvmlTemperatureThresholds_t;
    typedef enum nvmlTemperatureSensors_enum
    {
        NVML_TEMPERATURE_GPU = 0, 
        NVML_TEMPERATURE_COUNT
    } nvmlTemperatureSensors_t;
    typedef enum nvmlClockType_enum
    {
        NVML_CLOCK_GRAPHICS = 0, 
        NVML_CLOCK_SM = 1,       
        NVML_CLOCK_MEM = 2,      
        NVML_CLOCK_VIDEO = 3,    
        NVML_CLOCK_COUNT 
    } nvmlClockType_t;
    typedef enum nvmlClockId_enum
    {
        NVML_CLOCK_ID_CURRENT = 0,            
        NVML_CLOCK_ID_APP_CLOCK_TARGET = 1,   
        NVML_CLOCK_ID_APP_CLOCK_DEFAULT = 2,  
        NVML_CLOCK_ID_CUSTOMER_BOOST_MAX = 3, 
        NVML_CLOCK_ID_COUNT 
    } nvmlClockId_t;
    typedef enum nvmlPStates_enum
    {
        NVML_PSTATE_0 = 0,       
        NVML_PSTATE_1 = 1,       
        NVML_PSTATE_2 = 2,       
        NVML_PSTATE_3 = 3,       
        NVML_PSTATE_4 = 4,       
        NVML_PSTATE_5 = 5,       
        NVML_PSTATE_6 = 6,       
        NVML_PSTATE_7 = 7,       
        NVML_PSTATE_8 = 8,       
        NVML_PSTATE_9 = 9,       
        NVML_PSTATE_10 = 10,     
        NVML_PSTATE_11 = 11,     
        NVML_PSTATE_12 = 12,     
        NVML_PSTATE_13 = 13,     
        NVML_PSTATE_14 = 14,     
        NVML_PSTATE_15 = 15,     
        NVML_PSTATE_UNKNOWN = 32 
    } nvmlPstates_t;
    typedef enum nvmlInforomObject_enum
    {
        NVML_INFOROM_OEM = 0,   
        NVML_INFOROM_ECC = 1,   
        NVML_INFOROM_POWER = 2, 
        NVML_INFOROM_COUNT 
    } nvmlInforomObject_t;
    typedef enum nvmlReturn_enum
    {
        NVML_SUCCESS = 0,                        
        NVML_ERROR_UNINITIALIZED = 1,            
        NVML_ERROR_INVALID_ARGUMENT = 2,         
        NVML_ERROR_NOT_SUPPORTED = 3,            
        NVML_ERROR_NO_PERMISSION = 4,            
        NVML_ERROR_ALREADY_INITIALIZED = 5,      
        NVML_ERROR_NOT_FOUND = 6,                
        NVML_ERROR_INSUFFICIENT_SIZE = 7,        
        NVML_ERROR_INSUFFICIENT_POWER = 8,       
        NVML_ERROR_DRIVER_NOT_LOADED = 9,        
        NVML_ERROR_TIMEOUT = 10,                 
        NVML_ERROR_IRQ_ISSUE = 11,               
        NVML_ERROR_LIBRARY_NOT_FOUND = 12,       
        NVML_ERROR_FUNCTION_NOT_FOUND = 13,      
        NVML_ERROR_CORRUPTED_INFOROM = 14,       
        NVML_ERROR_GPU_IS_LOST = 15,             
        NVML_ERROR_RESET_REQUIRED = 16,          
        NVML_ERROR_OPERATING_SYSTEM = 17,        
        NVML_ERROR_LIB_RM_VERSION_MISMATCH = 18, 
        NVML_ERROR_IN_USE = 19,                  
        NVML_ERROR_MEMORY = 20,                  
        NVML_ERROR_NO_DATA = 21,                 
        NVML_ERROR_VGPU_ECC_NOT_SUPPORTED = 22,  
        NVML_ERROR_INSUFFICIENT_RESOURCES = 23,  
        NVML_ERROR_UNKNOWN = 999                 
    } nvmlReturn_t;
    typedef struct nvmlUnit_st *nvmlUnit_t;
    typedef struct nvmlHwbcEntry_st
    {
        unsigned int hwbcId;
        char firmwareVersion[32];
    } nvmlHwbcEntry_t;
    typedef struct nvmlUnitFanInfo_st
    {
        unsigned int speed;   
        nvmlFanState_t state; 
    } nvmlUnitFanInfo_t;
    typedef struct nvmlUnitFanSpeeds_st
    {
        nvmlUnitFanInfo_t fans[24]; 
        unsigned int count;         
    } nvmlUnitFanSpeeds_t;
    nvmlReturn_t DECLDIR nvmlUnitGetTemperature(nvmlUnit_t unit, unsigned int type, unsigned int *temp);
    nvmlReturn_t DECLDIR nvmlUnitGetFanSpeedInfo(nvmlUnit_t unit, nvmlUnitFanSpeeds_t *fanSpeeds);
    nvmlReturn_t DECLDIR nvmlUnitGetDevices(nvmlUnit_t unit, unsigned int *deviceCount, nvmlDevice_t *devices);
    nvmlReturn_t DECLDIR nvmlSystemGetHicVersion(unsigned int *hwbcCount, nvmlHwbcEntry_t *hwbcEntries);
    nvmlReturn_t DECLDIR nvmlDeviceGetCount_v2(unsigned int *deviceCount);
    nvmlReturn_t DECLDIR nvmlDeviceGetHandleByIndex_v2(unsigned int index, nvmlDevice_t *device);
    nvmlReturn_t DECLDIR nvmlDeviceGetHandleBySerial(const char *serial, nvmlDevice_t *device);
    nvmlReturn_t DECLDIR nvmlDeviceGetHandleByUUID(const char *uuid, nvmlDevice_t *device);
    nvmlReturn_t DECLDIR nvmlDeviceGetHandleByPciBusId_v2(const char *pciBusId, nvmlDevice_t *device);
    nvmlReturn_t DECLDIR nvmlDeviceGetName(nvmlDevice_t device, char *name, unsigned int length);
    nvmlReturn_t DECLDIR nvmlDeviceGetBrand(nvmlDevice_t device, nvmlBrandType_t *type);
    nvmlReturn_t DECLDIR nvmlDeviceGetIndex(nvmlDevice_t device, unsigned int *index);
    nvmlReturn_t DECLDIR nvmlDeviceGetSerial(nvmlDevice_t device, char *serial, unsigned int length);
    nvmlReturn_t DECLDIR nvmlDeviceGetCpuAffinity(nvmlDevice_t device, unsigned int cpuSetSize, unsigned long *cpuSet);
    nvmlReturn_t DECLDIR nvmlDeviceSetCpuAffinity(nvmlDevice_t device);
    nvmlReturn_t DECLDIR nvmlDeviceClearCpuAffinity(nvmlDevice_t device);
    nvmlReturn_t DECLDIR nvmlDeviceGetTopologyCommonAncestor(nvmlDevice_t device1, nvmlDevice_t device2, nvmlGpuTopologyLevel_t *pathInfo);
    nvmlReturn_t DECLDIR nvmlDeviceGetTopologyNearestGpus(nvmlDevice_t device, nvmlGpuTopologyLevel_t level, unsigned int *count, nvmlDevice_t *deviceArray);
    nvmlReturn_t DECLDIR nvmlSystemGetTopologyGpuSet(unsigned int cpuNumber, unsigned int *count, nvmlDevice_t *deviceArray);
    nvmlReturn_t DECLDIR nvmlDeviceGetP2PStatus(nvmlDevice_t device1, nvmlDevice_t device2, nvmlGpuP2PCapsIndex_t p2pIndex, nvmlGpuP2PStatus_t *p2pStatus);
    nvmlReturn_t DECLDIR nvmlDeviceGetUUID(nvmlDevice_t device, char *uuid, unsigned int length);
    nvmlReturn_t DECLDIR nvmlDeviceGetMinorNumber(nvmlDevice_t device, unsigned int *minorNumber);
    nvmlReturn_t DECLDIR nvmlDeviceGetBoardPartNumber(nvmlDevice_t device, char *partNumber, unsigned int length);
    nvmlReturn_t DECLDIR nvmlDeviceGetInforomVersion(nvmlDevice_t device, nvmlInforomObject_t object, char *version, unsigned int length);
    nvmlReturn_t DECLDIR nvmlDeviceGetInforomImageVersion(nvmlDevice_t device, char *version, unsigned int length);
    nvmlReturn_t DECLDIR nvmlDeviceGetInforomConfigurationChecksum(nvmlDevice_t device, unsigned int *checksum);
    nvmlReturn_t DECLDIR nvmlDeviceValidateInforom(nvmlDevice_t device);
    nvmlReturn_t DECLDIR nvmlDeviceGetDisplayMode(nvmlDevice_t device, nvmlEnableState_t *display);
    nvmlReturn_t DECLDIR nvmlDeviceGetDisplayActive(nvmlDevice_t device, nvmlEnableState_t *isActive);
    nvmlReturn_t DECLDIR nvmlDeviceGetPersistenceMode(nvmlDevice_t device, nvmlEnableState_t *mode);
    nvmlReturn_t DECLDIR nvmlDeviceGetPciInfo_v3(nvmlDevice_t device, nvmlPciInfo_t *pci);
    nvmlReturn_t DECLDIR nvmlDeviceGetMaxPcieLinkGeneration(nvmlDevice_t device, unsigned int *maxLinkGen);
    nvmlReturn_t DECLDIR nvmlDeviceGetMaxPcieLinkWidth(nvmlDevice_t device, unsigned int *maxLinkWidth);
    nvmlReturn_t DECLDIR nvmlDeviceGetCurrPcieLinkGeneration(nvmlDevice_t device, unsigned int *currLinkGen);
    nvmlReturn_t DECLDIR nvmlDeviceGetCurrPcieLinkWidth(nvmlDevice_t device, unsigned int *currLinkWidth);
    nvmlReturn_t DECLDIR nvmlDeviceGetPcieThroughput(nvmlDevice_t device, nvmlPcieUtilCounter_t counter, unsigned int *value);
    nvmlReturn_t DECLDIR nvmlDeviceGetPcieReplayCounter(nvmlDevice_t device, unsigned int *value);
    nvmlReturn_t DECLDIR nvmlDeviceGetClockInfo(nvmlDevice_t device, nvmlClockType_t type, unsigned int *clock);
    nvmlReturn_t DECLDIR nvmlDeviceGetMaxClockInfo(nvmlDevice_t device, nvmlClockType_t type, unsigned int *clock);
    nvmlReturn_t DECLDIR nvmlDeviceGetApplicationsClock(nvmlDevice_t device, nvmlClockType_t clockType, unsigned int *clockMHz);
    nvmlReturn_t DECLDIR nvmlDeviceGetDefaultApplicationsClock(nvmlDevice_t device, nvmlClockType_t clockType, unsigned int *clockMHz);
    nvmlReturn_t DECLDIR nvmlDeviceResetApplicationsClocks(nvmlDevice_t device);
    nvmlReturn_t DECLDIR nvmlDeviceGetClock(nvmlDevice_t device, nvmlClockType_t clockType, nvmlClockId_t clockId, unsigned int *clockMHz);
    nvmlReturn_t DECLDIR nvmlDeviceGetMaxCustomerBoostClock(nvmlDevice_t device, nvmlClockType_t clockType, unsigned int *clockMHz);
    nvmlReturn_t DECLDIR nvmlDeviceGetSupportedMemoryClocks(nvmlDevice_t device, unsigned int *count, unsigned int *clocksMHz);
    nvmlReturn_t DECLDIR nvmlDeviceGetSupportedGraphicsClocks(nvmlDevice_t device, unsigned int memoryClockMHz, unsigned int *count, unsigned int *clocksMHz);
    nvmlReturn_t DECLDIR nvmlDeviceGetAutoBoostedClocksEnabled(nvmlDevice_t device, nvmlEnableState_t *isEnabled, nvmlEnableState_t *defaultIsEnabled);
    nvmlReturn_t DECLDIR nvmlDeviceSetAutoBoostedClocksEnabled(nvmlDevice_t device, nvmlEnableState_t enabled);
    nvmlReturn_t DECLDIR nvmlDeviceSetDefaultAutoBoostedClocksEnabled(nvmlDevice_t device, nvmlEnableState_t enabled, unsigned int flags);
    nvmlReturn_t DECLDIR nvmlDeviceGetFanSpeed(nvmlDevice_t device, unsigned int *speed);
    nvmlReturn_t DECLDIR nvmlDeviceGetTemperature(nvmlDevice_t device, nvmlTemperatureSensors_t sensorType, unsigned int *temp);
    nvmlReturn_t DECLDIR nvmlDeviceGetTemperatureThreshold(nvmlDevice_t device, nvmlTemperatureThresholds_t thresholdType, unsigned int *temp);
    nvmlReturn_t DECLDIR nvmlDeviceGetPerformanceState(nvmlDevice_t device, nvmlPstates_t *pState);
    nvmlReturn_t DECLDIR nvmlDeviceGetCurrentClocksThrottleReasons(nvmlDevice_t device, unsigned long long *clocksThrottleReasons);
    nvmlReturn_t DECLDIR nvmlDeviceGetSupportedClocksThrottleReasons(nvmlDevice_t device, unsigned long long *supportedClocksThrottleReasons);
    nvmlReturn_t DECLDIR nvmlDeviceGetPowerState(nvmlDevice_t device, nvmlPstates_t *pState);
    nvmlReturn_t DECLDIR nvmlDeviceGetPowerManagementMode(nvmlDevice_t device, nvmlEnableState_t *mode);
    nvmlReturn_t DECLDIR nvmlDeviceGetPowerManagementLimit(nvmlDevice_t device, unsigned int *limit);
    nvmlReturn_t DECLDIR nvmlDeviceGetPciInfo_v2(nvmlDevice_t device, nvmlPciInfo_t *pci);