nvml-wrapper-sys/src/bindings.rs

extern "C" {
    pub fn nvmlUnitGetTemperature(unit: nvmlUnit_t, type_: raw::c_uint,
                                  temp: *mut raw::c_uint) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlUnitGetFanSpeedInfo(unit: nvmlUnit_t,
                                   fanSpeeds: *mut nvmlUnitFanSpeeds_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlUnitGetDevices(unit: nvmlUnit_t, deviceCount: *mut raw::c_uint,
                              devices: *mut nvmlDevice_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlSystemGetHicVersion(hwbcCount: *mut raw::c_uint,
                                   hwbcEntries: *mut nvmlHwbcEntry_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetCount_v2(deviceCount: *mut raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetHandleByIndex_v2(index: raw::c_uint,
                                         device: *mut nvmlDevice_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetHandleBySerial(serial: *const raw::c_char,
                                       device: *mut nvmlDevice_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetHandleByUUID(uuid: *const raw::c_char,
                                     device: *mut nvmlDevice_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetHandleByPciBusId_v2(pciBusId: *const raw::c_char,
                                            device: *mut nvmlDevice_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetName(device: nvmlDevice_t, name: *mut raw::c_char,
                             length: raw::c_uint) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetBrand(device: nvmlDevice_t,
                              type_: *mut nvmlBrandType_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetIndex(device: nvmlDevice_t, index: *mut raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetSerial(device: nvmlDevice_t, serial: *mut raw::c_char,
                               length: raw::c_uint) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetCpuAffinity(device: nvmlDevice_t,
                                    cpuSetSize: raw::c_uint,
                                    cpuSet: *mut raw::c_ulong)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceSetCpuAffinity(device: nvmlDevice_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceClearCpuAffinity(device: nvmlDevice_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetTopologyCommonAncestor(device1: nvmlDevice_t,
                                               device2: nvmlDevice_t,
                                               pathInfo:
                                                   *mut nvmlGpuTopologyLevel_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetTopologyNearestGpus(device: nvmlDevice_t,
                                            level: nvmlGpuTopologyLevel_t,
                                            count: *mut raw::c_uint,
                                            deviceArray: *mut nvmlDevice_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlSystemGetTopologyGpuSet(cpuNumber: raw::c_uint,
                                       count: *mut raw::c_uint,
                                       deviceArray: *mut nvmlDevice_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetP2PStatus(device1: nvmlDevice_t,
                                  device2: nvmlDevice_t,
                                  p2pIndex: nvmlGpuP2PCapsIndex_t,
                                  p2pStatus: *mut nvmlGpuP2PStatus_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetUUID(device: nvmlDevice_t, uuid: *mut raw::c_char,
                             length: raw::c_uint) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetMinorNumber(device: nvmlDevice_t,
                                    minorNumber: *mut raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetBoardPartNumber(device: nvmlDevice_t,
                                        partNumber: *mut raw::c_char,
                                        length: raw::c_uint) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetInforomVersion(device: nvmlDevice_t,
                                       object: nvmlInforomObject_t,
                                       version: *mut raw::c_char,
                                       length: raw::c_uint) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetInforomImageVersion(device: nvmlDevice_t,
                                            version: *mut raw::c_char,
                                            length: raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetInforomConfigurationChecksum(device: nvmlDevice_t,
                                                     checksum:
                                                         *mut raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceValidateInforom(device: nvmlDevice_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetDisplayMode(device: nvmlDevice_t,
                                    display: *mut nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetDisplayActive(device: nvmlDevice_t,
                                      isActive: *mut nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPersistenceMode(device: nvmlDevice_t,
                                        mode: *mut nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPciInfo_v3(device: nvmlDevice_t,
                                   pci: *mut nvmlPciInfo_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPciInfo_v2(device: nvmlDevice_t,
                                   pci: *mut nvmlPciInfo_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetMaxPcieLinkGeneration(device: nvmlDevice_t,
                                              maxLinkGen: *mut raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetMaxPcieLinkWidth(device: nvmlDevice_t,
                                         maxLinkWidth: *mut raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetCurrPcieLinkGeneration(device: nvmlDevice_t,
                                               currLinkGen: *mut raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetCurrPcieLinkWidth(device: nvmlDevice_t,
                                          currLinkWidth: *mut raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPcieThroughput(device: nvmlDevice_t,
                                       counter: nvmlPcieUtilCounter_t,
                                       value: *mut raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPcieReplayCounter(device: nvmlDevice_t,
                                          value: *mut raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetClockInfo(device: nvmlDevice_t,
                                  type_: nvmlClockType_t,
                                  clock: *mut raw::c_uint) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetMaxClockInfo(device: nvmlDevice_t,
                                     type_: nvmlClockType_t,
                                     clock: *mut raw::c_uint) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetApplicationsClock(device: nvmlDevice_t,
                                          clockType: nvmlClockType_t,
                                          clockMHz: *mut raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetDefaultApplicationsClock(device: nvmlDevice_t,
                                                 clockType: nvmlClockType_t,
                                                 clockMHz: *mut raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceResetApplicationsClocks(device: nvmlDevice_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetClock(device: nvmlDevice_t,
                              clockType: nvmlClockType_t,
                              clockId: nvmlClockId_t,
                              clockMHz: *mut raw::c_uint) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetMaxCustomerBoostClock(device: nvmlDevice_t,
                                              clockType: nvmlClockType_t,
                                              clockMHz: *mut raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetSupportedMemoryClocks(device: nvmlDevice_t,
                                              count: *mut raw::c_uint,
                                              clocksMHz: *mut raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetSupportedGraphicsClocks(device: nvmlDevice_t,
                                                memoryClockMHz: raw::c_uint,
                                                count: *mut raw::c_uint,
                                                clocksMHz: *mut raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetAutoBoostedClocksEnabled(device: nvmlDevice_t,
                                                 isEnabled:
                                                     *mut nvmlEnableState_t,
                                                 defaultIsEnabled:
                                                     *mut nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceSetAutoBoostedClocksEnabled(device: nvmlDevice_t,
                                                 enabled: nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceSetDefaultAutoBoostedClocksEnabled(device: nvmlDevice_t,
                                                        enabled:
                                                            nvmlEnableState_t,
                                                        flags: raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetFanSpeed(device: nvmlDevice_t,
                                 speed: *mut raw::c_uint) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetTemperature(device: nvmlDevice_t,
                                    sensorType: nvmlTemperatureSensors_t,
                                    temp: *mut raw::c_uint) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetTemperatureThreshold(device: nvmlDevice_t,
                                             thresholdType:
                                                 nvmlTemperatureThresholds_t,
                                             temp: *mut raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPerformanceState(device: nvmlDevice_t,
                                         pState: *mut nvmlPstates_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetCurrentClocksThrottleReasons(device: nvmlDevice_t,
                                                     clocksThrottleReasons:
                                                         *mut raw::c_ulonglong)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetSupportedClocksThrottleReasons(device: nvmlDevice_t,
                                                       supportedClocksThrottleReasons:
                                                           *mut raw::c_ulonglong)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPowerState(device: nvmlDevice_t,
                                   pState: *mut nvmlPstates_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPowerManagementMode(device: nvmlDevice_t,
                                            mode: *mut nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetPowerManagementLimit(device: nvmlDevice_t,
                                             limit: *mut raw::c_uint)
     -> nvmlReturn_t;
}
